# teste-api-robotframework

./: .gitignore  pyproject.toml  readme.md  test.robot  test_libraries.robot
.github/: dependabot.yml
.github/workflows/: advanced-tests.yml  quality-check.yml  robot-tests.yml
Resources/requests/: post_order.robot
